[package]
name = "async-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.75"
tokio = { version = "1.35.0", features = ["rt", "sync", "rt-multi-thread"] }
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
